--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,59 @@
 body{
-  background-image: url(../images/p1.jpg);
-  background-size: cover;
-
+background-color: grey;
+color: white;
+font-style: italic;
+font-family: sans-serif;
 }
 #container {
 display: grid;
-grid-template-columns: repeat(5, 1fr);
-grid-template-rows: 0.5fr repeat(4, 1fr) .5fr;
-grid-column-gap: 0.5px;
-grid-row-gap: 0.5px;
+width: 100%;
+height: 100vh;
+grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+grid-column-gap: 2px;
+grid-row-gap: 2px;
 }
 #container .title{
-  grid-column: 3/4;
+  grid-column: 2/5;
   grid-row: 1/2;
   text-align: center;
   font-family:serif;
 }
-#container .mianphoto{
-  grid-row:
+#container .text{
+  grid-row:2/3;
+  grid-column: 1/3;
+  font-size: 20px;
+  align-content: center;
+  color: white;
+}
+#container .photomic{
+  background-image: url(../images/mic.jpg);
+  grid-column: 4/5;
+  grid-row: 2/3;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#container .poemt{
+  grid-column:3/6;
+  grid-row: 3/4;
+  font-size: 20px;
+}
+#container .photopoem{
+  background-image: url(../images/sea.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  grid-column: 1/3;
+  grid-row: 3/4;
+}
+#container .maidert{
+  grid-column: 1/3;
+  grid-row: 4/5;
+font-size: 20px;
+}
+#container .video{
+  grid-column: 4/5;
+  grid-row: 4/5;
+  
 }
