--- a/css/humayun.css
+++ b/css/humayun.css
@@ -1,14 +1,12 @@
 body{
-background-image:url(../images/bc.jpg);
+background-image:url(../images/sea.gif);
 font-style: italic;
-font-family: sans-serif;
+font-family:palatino;
+color: white;
+background-position: center;
+background-size: cover;
 }
-#container .wave{
-  background-position: center;
-  background-image: url(../images/wave.png);
-  grid-column:1/6;
-  grid-row: 6/7;
-}
+
 #container {
 display: grid;
 width: 100%;
@@ -18,20 +16,29 @@ grid-template-rows: .5fr 1fr 1fr 1fr 1fr 1fr 1fr;
 grid-column-gap: 10px;
 grid-row-gap: 5px;
 }
+
+#container .homeicon{
+  margin-left: 5%;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  position: absolute;
+  align-items: center;
+  background-position: right;
+}
 #container .title{
   grid-column: 1/6;
   grid-row: 1/2;
   text-align: center;
   font-family:serif;
+  background-color: grey;;
   color: white;
-  background-color: black;
 }
 #container .text{
   grid-row:2/3;
   grid-column: 1/3;
   font-size: 25px;
   align-content: center;
-  color: white;
+  font-size: 28px;
 }
 #container .photomic{
   background-image: url(../images/mic.jpg);
@@ -40,11 +47,22 @@ grid-row-gap: 5px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+
 }
+.photomic:hover {
+    position:relative;
+    top:-25px;
+    left:-35px;
+    width:400px;
+    height:auto;
+    display:block;
+    z-index:999;
+  }
 #container .poemt{
   grid-column:3/6;
   grid-row: 3/4;
-  font-size: 25px;
+  font-size: 28px;
+
 
 }
 #container .photopoem{
@@ -58,7 +76,7 @@ grid-row-gap: 5px;
 #container .maidert{
   grid-column: 1/3;
   grid-row: 4/5;
-font-size: 25px;
+font-size: 28px;
 background-position: bottom;
 }
 #container .video{
