--- a/css/humayun.css
+++ b/css/humayun.css
@@ -1,10 +1,10 @@
 body{
-background-image:url(../images/sea.gif);
+background-image:url(../images/beach.jpg);
 font-style: italic;
 font-family:palatino;
 color: white;
-background-position: center;
 background-size: cover;
+background-position: center;
 }
 
 #container {
@@ -39,6 +39,7 @@ grid-row-gap: 5px;
   font-size: 25px;
   align-content: center;
   font-size: 28px;
+  color: black;
 }
 #container .photomic{
   background-image: url(../images/mic.jpg);
@@ -47,17 +48,16 @@ grid-row-gap: 5px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
+  transition: transform .2s;
 }
-.photomic:hover {
-    position:relative;
-    top:-25px;
-    left:-35px;
-    width:400px;
-    height:auto;
-    display:block;
-    z-index:999;
-  }
+
+#container .photomic:hover {
+  .zoom:hover
+  -ms-transform: scale(4); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+}
+
 #container .poemt{
   grid-column:3/6;
   grid-row: 3/4;
@@ -70,8 +70,15 @@ grid-row-gap: 5px;
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  transition: transform .2s;
   grid-column: 1/3;
   grid-row: 3/4;
+}
+#container .photopoem:hover{
+  .zoom:hover
+  -ms-transform: scale(4); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
 }
 #container .maidert{
   grid-column: 1/3;
