--- a/css/anzal.css
+++ b/css/anzal.css
@@ -61,7 +61,7 @@ font-family: 'Acme' ;
   font-size: 28px;
   color: ;
 }
-#container .photomic{
+#container .img1{
   background-image: url(../images/escales2.jpg);
   grid-column: 4/5;
   grid-row: 2/3;
@@ -72,7 +72,7 @@ font-family: 'Acme' ;
 }
 
 
-#container .photomic:hover {
+#container .img1:hover {
   .zoom:hover
   -ms-transform: scale(4); /* IE 9 */
   -webkit-transform: scale(1.5); /* Safari 3-8 */
@@ -86,18 +86,18 @@ font-family: 'Acme' ;
 
 
 }
-#container .photopoem{
+#container .img2{
   background-image: url(../images/escales1.jpg);
-  background-position: center;
+  background-position: bottom;
   background-size: contain;
   background-repeat: no-repeat;
   transition: transform .2s;
   grid-column: 1/3;
-  grid-row: 3/4;
+  grid-row: 3/6;
 }
-#container .photopoem:hover{
+#container .img2:hover{
   .zoom:hover
-  -ms-transform: scale(4); /* IE 9 */
+  -ms-transform: scale(8); /* IE 9 */
   -webkit-transform: scale(1.5); /* Safari 3-8 */
   transform: scale(1.5);
 }
