--- a/css/humayun.css
+++ b/css/humayun.css
@@ -59,7 +59,8 @@ font-family: 'Acme' ;
   font-size: 25px;
   align-content: center;
   font-size: 28px;
-  color: ;
+  border: solid;
+  border-color: black;
 }
 #container .photomic{
   background-image: url(../images/mic.jpg);
@@ -83,8 +84,8 @@ font-family: 'Acme' ;
   grid-column:3/6;
   grid-row: 3/4;
   font-size: 28px;
-
-
+  border: solid;
+  border-color: black;
 }
 #container .photopoem{
   background-image: url(../images/sea.png);
@@ -106,6 +107,9 @@ font-family: 'Acme' ;
   grid-row: 4/5;
 font-size: 28px;
 background-position: bottom;
+border: solid;
+border-color: black;
+
 }
 #container .video{
   grid-column: 4/5;
@@ -126,6 +130,9 @@ grid-row: 2/5;
 grid-column: 1/3;
 text-align: center;
 font-size: 25px;
+border: solid;
+border-color: black;
+
 }
 #containter .v2t{
   grid-row: 5/7;
