--- a/css/anzal.css
+++ b/css/anzal.css
@@ -60,6 +60,9 @@ font-family: 'Acme' ;
   align-content: center;
   font-size: 28px;
   color: ;
+  border: solid;
+  border-color: black;
+
 }
 #container .img1{
   background-image: url(../images/escales2.jpg);
@@ -83,6 +86,8 @@ font-family: 'Acme' ;
   grid-column:3/6;
   grid-row: 3/4;
   font-size: 28px;
+  border: solid;
+  border-color: black;
 
 
 }
